gosu-core/src/main/java/gw/internal/gosu/parser/java/GrammarProcessorParser.java
/*
 * Copyright 2012. Guidewire Software, Inc.
 */

package gw.internal.gosu.parser.java;// $ANTLR 3.4 GrammarProcessor.g 2012-10-01 17:25:14

import gw.internal.ext.org.antlr.runtime.BaseRecognizer;
import gw.internal.ext.org.antlr.runtime.BitSet;
import gw.internal.ext.org.antlr.runtime.DFA;
import gw.internal.ext.org.antlr.runtime.EarlyExitException;
import gw.internal.ext.org.antlr.runtime.MismatchedSetException;
import gw.internal.ext.org.antlr.runtime.NoViableAltException;
import gw.internal.ext.org.antlr.runtime.Parser;
import gw.internal.ext.org.antlr.runtime.ParserRuleReturnScope;
import gw.internal.ext.org.antlr.runtime.RecognitionException;
import gw.internal.ext.org.antlr.runtime.RecognizerSharedState;
import gw.internal.ext.org.antlr.runtime.Token;
import gw.internal.ext.org.antlr.runtime.TokenRewriteStream;
import gw.internal.ext.org.antlr.runtime.TokenStream;
import gw.internal.ext.org.antlr.stringtemplate.StringTemplate;
import gw.internal.ext.org.antlr.stringtemplate.StringTemplateGroup;
import gw.internal.ext.org.antlr.stringtemplate.language.AngleBracketTemplateLexer;

import java.util.HashMap;
/** ANTLR v3 grammar written in ANTLR v3 with AST construction */
@SuppressWarnings({"all", "warnings", "unchecked"})
public class GrammarProcessorParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACTION", "ACTION_CHAR_LITERAL", "ACTION_ESC", "ACTION_STRING_LITERAL", "ALT", "ARG", "ARGLIST", "ARG_ACTION", "BACKTRACK_SEMPRED", "BANG", "BLOCK", "CHAR_LITERAL", "CHAR_RANGE", "CLOSURE", "COMBINED_GRAMMAR", "DOC_COMMENT", "DOUBLE_ANGLE_STRING_LITERAL", "DOUBLE_QUOTE_STRING_LITERAL", "EOA", "EOB", "EOR", "EPSILON", "ESC", "FRAGMENT", "GATED_SEMPRED", "ID", "INITACTION", "INT", "LABEL", "LEXER", "LEXER_GRAMMAR", "LITERAL_CHAR", "ML_COMMENT", "NESTED_ACTION", "NESTED_ARG_ACTION", "OPTIONAL", "OPTIONS", "PARSER", "PARSER_GRAMMAR", "POSITIVE_CLOSURE", "RANGE", "RET", "REWRITE", "ROOT", "RULE", "RULE_REF", "SCOPE", "SEMPRED", "SL_COMMENT", "SRC", "STRING_LITERAL", "SYNPRED", "SYN_SEMPRED", "TEMPLATE", "TOKENS", "TOKEN_REF", "TREE_BEGIN", "TREE_GRAMMAR", "WS", "WS_LOOP", "XDIGIT", "'$'", "'('", "')'", "'*'", "'+'", "'+='", "','", "'.'", "':'", "'::'", "';'", "'='", "'=>'", "'?'", "'@'", "'catch'", "'finally'", "'grammar'", "'lexer'", "'parser'", "'private'", "'protected'", "'public'", "'returns'", "'throws'", "'tree'", "'|'", "'}'", "'~'"
    };

    public static final int EOF=-1;
    public static final int T__65=65;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__70=70;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__73=73;
    public static final int T__74=74;
    public static final int T__75=75;
    public static final int T__76=76;
    public static final int T__77=77;
    public static final int T__78=78;
    public static final int T__79=79;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int T__84=84;
    public static final int T__85=85;
    public static final int T__86=86;
    public static final int T__87=87;
    public static final int T__88=88;
    public static final int T__89=89;
    public static final int T__90=90;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int T__93=93;
    public static final int ACTION=4;
    public static final int ACTION_CHAR_LITERAL=5;
    public static final int ACTION_ESC=6;
    public static final int ACTION_STRING_LITERAL=7;
    public static final int ALT=8;
    public static final int ARG=9;
    public static final int ARGLIST=10;
    public static final int ARG_ACTION=11;
    public static final int BACKTRACK_SEMPRED=12;
    public static final int BANG=13;
    public static final int BLOCK=14;
    public static final int CHAR_LITERAL=15;
    public static final int CHAR_RANGE=16;
    public static final int CLOSURE=17;
    public static final int COMBINED_GRAMMAR=18;
    public static final int DOC_COMMENT=19;
    public static final int DOUBLE_ANGLE_STRING_LITERAL=20;
    public static final int DOUBLE_QUOTE_STRING_LITERAL=21;
    public static final int EOA=22;
    public static final int EOB=23;
    public static final int EOR=24;
    public static final int EPSILON=25;
    public static final int ESC=26;
    public static final int FRAGMENT=27;
    public static final int GATED_SEMPRED=28;
    public static final int ID=29;
    public static final int INITACTION=30;
    public static final int INT=31;
    public static final int LABEL=32;
    public static final int LEXER=33;
    public static final int LEXER_GRAMMAR=34;
    public static final int LITERAL_CHAR=35;
    public static final int ML_COMMENT=36;
    public static final int NESTED_ACTION=37;
    public static final int NESTED_ARG_ACTION=38;
    public static final int OPTIONAL=39;
    public static final int OPTIONS=40;
    public static final int PARSER=41;
    public static final int PARSER_GRAMMAR=42;
    public static final int POSITIVE_CLOSURE=43;
    public static final int RANGE=44;
    public static final int RET=45;
    public static final int REWRITE=46;
    public static final int ROOT=47;
    public static final int RULE=48;
    public static final int RULE_REF=49;
    public static final int SCOPE=50;
    public static final int SEMPRED=51;
    public static final int SL_COMMENT=52;
    public static final int SRC=53;
    public static final int STRING_LITERAL=54;
    public static final int SYNPRED=55;
    public static final int SYN_SEMPRED=56;
    public static final int TEMPLATE=57;
    public static final int TOKENS=58;
    public static final int TOKEN_REF=59;
    public static final int TREE_BEGIN=60;
    public static final int TREE_GRAMMAR=61;
    public static final int WS=62;
    public static final int WS_LOOP=63;
    public static final int XDIGIT=64;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public GrammarProcessorParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public GrammarProcessorParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected StringTemplateGroup templateLib =
  new StringTemplateGroup("GrammarProcessorParserTemplates", AngleBracketTemplateLexer.class);

public void setTemplateLib(StringTemplateGroup templateLib) {
  this.templateLib = templateLib;
}
public StringTemplateGroup getTemplateLib() {
  return templateLib;
}
/** allows convenient multi-value initialization:
 *  "new STAttrMap().put(...).put(...)"
 */
public static class STAttrMap extends HashMap {
  public STAttrMap put(String attrName, Object value) {
    super.put(attrName, value);
    return this;
  }
  public STAttrMap put(String attrName, int value) {
    super.put(attrName, new Integer(value));
    return this;
  }
}
    public String[] getTokenNames() { return GrammarProcessorParser.tokenNames; }
    public String getGrammarFileName() { return "GrammarProcessor.g"; }


        int count = 0;


    public static class grammarDef_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };


    // $ANTLR start "grammarDef"
    // GrammarProcessor.g:92:1: grammarDef : ( DOC_COMMENT )? ( 'lexer' | 'parser' | 'tree' |) 'grammar' id ';' ( optionsSpec )? ( tokensSpec )? ( attrScope )* ( action )* ( rule )+ EOF ;
    public final grammarDef_return grammarDef() throws RecognitionException {
        grammarDef_return retval = new grammarDef_return();
        retval.start = input.LT(1);


        try {
            // GrammarProcessor.g:93:5: ( ( DOC_COMMENT )? ( 'lexer' | 'parser' | 'tree' |) 'grammar' id ';' ( optionsSpec )? ( tokensSpec )? ( attrScope )* ( action )* ( rule )+ EOF )
            // GrammarProcessor.g:93:9: ( DOC_COMMENT )? ( 'lexer' | 'parser' | 'tree' |) 'grammar' id ';' ( optionsSpec )? ( tokensSpec )? ( attrScope )* ( action )* ( rule )+ EOF
            {
            // GrammarProcessor.g:93:9: ( DOC_COMMENT )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==DOC_COMMENT) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // GrammarProcessor.g:93:9: DOC_COMMENT
                    {
                    match(input,DOC_COMMENT,FOLLOW_DOC_COMMENT_in_grammarDef335); 

                    }
                    break;

            }


            // GrammarProcessor.g:94:6: ( 'lexer' | 'parser' | 'tree' |)
            int alt2=4;
            switch ( input.LA(1) ) {
            case 83:
                {
                alt2=1;
                }
                break;
            case 84:
                {
                alt2=2;
                }
                break;
            case 90:
                {
                alt2=3;
                }
                break;
            case 82:
                {
                alt2=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;

            }

            switch (alt2) {
                case 1 :
                    // GrammarProcessor.g:94:8: 'lexer'
                    {
                    match(input,83,FOLLOW_83_in_grammarDef345); 

                    }
                    break;
                case 2 :
                    // GrammarProcessor.g:95:10: 'parser'
                    {
                    match(input,84,FOLLOW_84_in_grammarDef361); 

                    }
                    break;
                case 3 :
                    // GrammarProcessor.g:96:10: 'tree'
                    {
                    match(input,90,FOLLOW_90_in_grammarDef376); 

                    }
                    break;
                case 4 :
                    // GrammarProcessor.g:98:6: 
                    {
                    }
                    break;

            }


            match(input,82,FOLLOW_82_in_grammarDef400); 

            pushFollow(FOLLOW_id_in_grammarDef402);
            id();

            state._fsp--;


            match(input,75,FOLLOW_75_in_grammarDef404); 

            // GrammarProcessor.g:98:25: ( optionsSpec )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==OPTIONS) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // GrammarProcessor.g:98:25: optionsSpec
                    {
                    pushFollow(FOLLOW_optionsSpec_in_grammarDef406);
                    optionsSpec();

                    state._fsp--;


                    }
                    break;

            }


            // GrammarProcessor.g:98:38: ( tokensSpec )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==TOKENS) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // GrammarProcessor.g:98:38: tokensSpec
                    {
                    pushFollow(FOLLOW_tokensSpec_in_grammarDef409);
                    tokensSpec();

                    state._fsp--;


                    }
                    break;

            }


            // GrammarProcessor.g:98:50: ( attrScope )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==SCOPE) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // GrammarProcessor.g:98:50: attrScope
            	    {
            	    pushFollow(FOLLOW_attrScope_in_grammarDef412);
            	    attrScope();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            // GrammarProcessor.g:98:61: ( action )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==79) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // GrammarProcessor.g:98:61: action
            	    {
            	    pushFollow(FOLLOW_action_in_grammarDef415);
            	    action();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            // GrammarProcessor.g:99:6: ( rule )+
            int cnt7=0;
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==DOC_COMMENT||LA7_0==FRAGMENT||LA7_0==RULE_REF||LA7_0==TOKEN_REF||(LA7_0 >= 85 && LA7_0 <= 87)) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // GrammarProcessor.g:99:6: rule
            	    {
            	    pushFollow(FOLLOW_rule_in_grammarDef423);
            	    rule();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt7 >= 1 ) break loop7;
                        EarlyExitException eee =
                            new EarlyExitException(7, input);
                        throw eee;
                }
                cnt7++;
            } while (true);


            match(input,EOF,FOLLOW_EOF_in_grammarDef431); 

            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "grammarDef"


    public static class tokensSpec_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };


    // $ANTLR start "tokensSpec"
    // GrammarProcessor.g:103:1: tokensSpec : TOKENS ( tokenSpec )+ '}' ;
    public final tokensSpec_return tokensSpec() throws RecognitionException {
        tokensSpec_return retval = new tokensSpec_return();
        retval.start = input.LT(1);


        try {
            // GrammarProcessor.g:104:2: ( TOKENS ( tokenSpec )+ '}' )
            // GrammarProcessor.g:104:4: TOKENS ( tokenSpec )+ '}'
            {
            match(input,TOKENS,FOLLOW_TOKENS_in_tokensSpec445); 

            // GrammarProcessor.g:104:11: ( tokenSpec )+
            int cnt8=0;
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==TOKEN_REF) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // GrammarProcessor.g:104:11: tokenSpec
            	    {
            	    pushFollow(FOLLOW_tokenSpec_in_tokensSpec447);
            	    tokenSpec();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt8 >= 1 ) break loop8;
                        EarlyExitException eee =
                            new EarlyExitException(8, input);
                        throw eee;
                }
                cnt8++;
            } while (true);


            match(input,92,FOLLOW_92_in_tokensSpec450); 

            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "tokensSpec"


    public static class tokenSpec_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };


    // $ANTLR start "tokenSpec"
    // GrammarProcessor.g:107:1: tokenSpec : TOKEN_REF ( '=' ( STRING_LITERAL | CHAR_LITERAL ) |) ';' ;
    public final tokenSpec_return tokenSpec() throws RecognitionException {
        tokenSpec_return retval = new tokenSpec_return();
        retval.start = input.LT(1);


        try {
            // GrammarProcessor.g:108:2: ( TOKEN_REF ( '=' ( STRING_LITERAL | CHAR_LITERAL ) |) ';' )
            // GrammarProcessor.g:108:4: TOKEN_REF ( '=' ( STRING_LITERAL | CHAR_LITERAL ) |) ';'
            {
            match(input,TOKEN_REF,FOLLOW_TOKEN_REF_in_tokenSpec461); 

            // GrammarProcessor.g:109:3: ( '=' ( STRING_LITERAL | CHAR_LITERAL ) |)
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==76) ) {
                alt9=1;
            }
            else if ( (LA9_0==75) ) {
                alt9=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;

            }
            switch (alt9) {
                case 1 :
                    // GrammarProcessor.g:109:5: '=' ( STRING_LITERAL | CHAR_LITERAL )
                    {
                    match(input,76,FOLLOW_76_in_tokenSpec467); 

                    if ( input.LA(1)==CHAR_LITERAL||input.LA(1)==STRING_LITERAL ) {
                        input.consume();
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }


                    }
                    break;
                case 2 :
                    // GrammarProcessor.g:111:3: 
                    {
                    }
                    break;

            }


            match(input,75,FOLLOW_75_in_tokenSpec487); 

            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "tokenSpec"


    public static class attrScope_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };


    // $ANTLR start "attrScope"
    // GrammarProcessor.g:115:1: attrScope : 'scope' id ACTION ;
    public final attrScope_return attrScope() throws RecognitionException {
        attrScope_return retval = new attrScope_return();
        retval.start = input.LT(1);


        try {
            // GrammarProcessor.g:116:2: ( 'scope' id ACTION )
            // GrammarProcessor.g:116:4: 'scope' id ACTION
            {
            match(input,SCOPE,FOLLOW_SCOPE_in_attrScope498); 

            pushFollow(FOLLOW_id_in_attrScope500);
            id();

            state._fsp--;


            match(input,ACTION,FOLLOW_ACTION_in_attrScope502); 

            }

            retval.stop = input.LT(-1);


        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "attrScope"


    public static class action_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };


    // $ANTLR start "action"
    // GrammarProcessor.g:120:1: action : '@' ( actionScopeName '::' )? id ACTION ;
    public final action_return action() throws RecognitionException {
        action_return retval = new action_return();
        retval.start = input.LT(1);


        try {
            // GrammarProcessor.g:121:2: ( '@' ( actionScopeName '::' )? id ACTION )
            // GrammarProcessor.g:121:4: '@' ( actionScopeName '::' )? id ACTION
            {
            match(input,79,FOLLOW_79_in_action515); 

            // GrammarProcessor.g:121:8: ( actionScopeName '::' )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( (LA10_0==RULE_REF||LA10_0==TOKEN_REF) ) {
                int LA10_1 = input.LA(2);
